# Market-Atlas

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  SECURITY.md
backend/: pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: __init__.py  auth.py  news.py  research.py  stocks.py  telegram.py  watchlist.py  websocket.py
backend/app/core/: batch.py  cache.py  celery_app.py  config.py  database.py  logging_config.py  metrics.py  security.py  token_manager.py
backend/app/models/: __init__.py  filing.py  news.py  research_task.py  stock.py  user.py  watchlist.py
backend/app/schemas/: __init__.py  news.py  user.py  watchlist.py
backend/app/services/: ai_service.py  finnhub_service.py  fmp_service.py  polygon_service.py  sec_service.py  stock_service.py  telegram_service.py
backend/app/tasks/: news_tasks.py  research_tasks.py
backend/tests/: conftest.py  test_auth.py  test_config.py  test_integration.py  test_schemas.py  test_security.py
docker/: Dockerfile.backend  Dockerfile.frontend  docker-compose.yml
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/app/(auth)/login/: page.tsx
frontend/src/app/(auth)/register/: page.tsx
frontend/src/app/(dashboard)/: layout.tsx  page.tsx
frontend/src/app/(dashboard)/dashboard/: page.tsx
frontend/src/app/auth/callback/: page.tsx
frontend/src/components/layout/: header.tsx  sidebar.tsx
frontend/src/lib/: api.ts
frontend/src/types/: index.ts
(+6 files in other folders)
